--- a/login-2.html
+++ b/login-2.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main">
         <div class="contain">
-            <a href="./onboard-1.html"><i class="fa-solid fa-arrow-left" id="arrow-left"></i></a>
+            <a href="./index.html"><i class="fa-solid fa-arrow-left" id="arrow-left"></i></a>
             <h5>Login</h5>
             <h4>Welcome Back!</h4>
         </div>
