--- a/travel-8.html
+++ b/travel-8.html
@@ -18,7 +18,7 @@
         </div>
         <hr>
         <div class="container">
-            <a href="./onboard-1.html"><i class="fa-solid fa-arrow-left" id="arrow-left"></i></a>
+            <a href="./index.html"><i class="fa-solid fa-arrow-left" id="arrow-left"></i></a>
             <h5>Travel Guide</h5>
         </div>
         <div class="box">
