--- a/travelguide-10.html
+++ b/travelguide-10.html
@@ -58,8 +58,8 @@
                 <a href="./time-11.html"><img src="./images/Vector-2.png"></a>
             </div>
         </div>
-
     </div>
-    
+    <b></b>
+    <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2017599.1883150383!2d6.737792772587887!3d9.00675584413498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0baf7da48d0d%3A0x99a8fe4168c50bc8!2sNigeria!5e0!3m2!1sen!2sng!4v1736947075852!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 </body>
 </html>
